# z85-wasm

./: .gitignore  .npmignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  jest.config.js  node.d.ts  node.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: npm-publish.yml
example/: demo.ts
scripts/: build.js
src/: lib.rs
test/: e2e.test.ts
