[package]
name = "z85-wasm"
version = "0.1.0"
authors = ["Common Creation, Co., Ltd."]
edition = "2021"
description = "Z85 encoder/decoder WASM library"
license = "MIT"
repository = "https://github.com/common-creation/z85-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = "0.3"
z85 = "3.0.6"
base64 = "0.22.1"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
